<resources>

    <string name="app_name">Pesterdroid</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Pesterdroid</string>
    <string name="title_activity_settings">Pesterdroid Settings</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Colour Picker</string>
    <string name="press_color_to_apply">Press on Colour to apply</string>
    <string name="menu_help">Help/About</string>
    <string name="menu_chumroll">Chumroll</string>
    <string name="menu_chumroll_short">Chums</string>
    <string name="menu_mood">Mood</string>
    <string name="menu_memolist">Memo List</string>
    <string name="menu_memolist_short">Memos</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">Help/About</string>
    <string name="menu_nickserv">NickServ</string>
    <string name="title_activity_abstract">AbstractActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="notification_running">Pesterdroid Running…</string>
    <string name="default_notification_types">Memo MentionsOV=I=XseparatorX=I=VONew Conversations</string>
    <string name="default_handle">pesterDroid</string>
    <string name="connect_fail">Failed to connect: %1$d; </string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_notication_settings">Notification Settings</string>

</resources>